<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_menu_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_menu_power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sdfs"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_menu_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_menu_start"/>

    <Button
        android:id="@+id/button_menu_preparation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/preparation"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_test_item"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_menu_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_menu_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_menu_start"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/button_menu_exam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/exam"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_test_item"
        app:layout_constraintEnd_toStartOf="@+id/guideline_menu_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_menu_start"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_preparation" />

    <Button
        android:id="@+id/button_menu_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_test_item"
        app:layout_constraintEnd_toStartOf="@+id/guideline_menu_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_menu_start"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_exam" />

    <Button
        android:id="@+id/button_menu_create_exam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_exam"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_test_item"
        app:layout_constraintEnd_toStartOf="@+id/guideline_menu_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_menu_start"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_result" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_menu_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_menu_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</android.support.constraint.ConstraintLayout>