<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_create_exam_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_create_exam_speciality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@id/edit_text_create_exam_name" />

        <Spinner
            android:id="@+id/spinner_create_exam_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@id/spinner_create_exam_speciality" />

        <Spinner
            android:id="@+id/spinner_create_exam_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@id/spinner_create_exam_course" />

        <Spinner
            android:id="@+id/spinner_create_exam_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@id/spinner_create_exam_subject" />

        <TextView
            android:id="@+id/text_view_create_exam_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/number_picker_create_exam_time"
            app:layout_constraintEnd_toStartOf="@+id/number_picker_create_exam_time"
            app:layout_constraintStart_toStartOf="@+id/guideline_create_exam_start"
            app:layout_constraintTop_toTopOf="@+id/number_picker_create_exam_time"
            app:layout_constraintVertical_bias="0.459" />

        <NumberPicker
            android:id="@+id/number_picker_create_exam_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@+id/spinner_create_exam_file" />

        <TextView
            android:id="@+id/text_view_create_exam_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/number_picker_create_exam_time"
            app:layout_constraintEnd_toStartOf="@+id/guideline_create_exam_end"
            app:layout_constraintStart_toEndOf="@+id/number_picker_create_exam_time"
            app:layout_constraintTop_toTopOf="@+id/number_picker_create_exam_time" />

        <EditText
            android:id="@+id/edit_text_create_exam_max_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/max_result"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintTop_toBottomOf="@id/number_picker_create_exam_time" />

        <TextView
            android:id="@+id/text_view_create_exam_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/count"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/number_picker_create_exam_count"
            app:layout_constraintStart_toStartOf="@+id/guideline_create_exam_start"
            app:layout_constraintTop_toTopOf="@+id/number_picker_create_exam_count" />

        <NumberPicker
            android:id="@+id/number_picker_create_exam_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/text_view_create_exam_count"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_create_exam_max_result" />

        <Button
            android:id="@+id/button_menu_create_exam_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:background="@drawable/button_test_item"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@id/guideline_create_exam_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_create_exam_end"
            app:layout_constraintTop_toBottomOf="@id/number_picker_create_exam_count"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_create_exam_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_create_exam_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>